feat: BREAKING CHANGE: Adjust card, modal, and form fields to comply with content component (#118)
* add first pass on content component

* remove left border of first tab

* adjust card component and documentation

* remove form field margin and adjust every field documentation

* add base padding by default on content

* adjust modal styligng to accomodate content

* put base padding as default for content

* adjust input text documentation

* remove unecessary code

* content aware content padding

* content aware tabs

* update public tab inset because i forgot

* remove card default margin

* remove padding none

* simplify modal docs

* don't export title

* better input and select examples

* adjust content tests

* remove the title from examples

* make content real smart by adding padding automatically

* adjust markdown tests

* adjust card and modal tests

* Update package-lock.json

* adjust contents padding on when nested

* remove commited weird example

* remove padded prop

--- a/packages/components/src/Content/Content.mdx
+++ b/packages/components/src/Content/Content.mdx
@@ -12,7 +12,7 @@ import { Heading } from "../Heading";
 import { InputText } from "../InputText";
 import { Button } from "../Button";
 import { Tabs, Tab } from "../Tabs";
-import { Card, Title } from "../Card";
+import { Card } from "../Card";
 
 # Content
 
@@ -22,35 +22,34 @@ Contents are used to give elements consistent vertical spacing and padding.
 
 <Playground>
   <Content>
-    <Heading level={2}>Sign up!</Heading>
-    <Text>
-      Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis
-      vestibulum. Nulla vitae elit libero, a pharetra augue. Nullam quis risus
-      eget urna mollis ornare vel eu leo. Vestibulum id ligula porta felis
-      euismod semper. Curabitur blandit tempus porttitor.
-    </Text>
-    <InputText placeholder="Name" />
-    <InputText placeholder="Phone" />
-    <InputText placeholder="Email" />
-    <InputText
-      multiline={true}
-      placeholder="Describe yourself"
-      name="describeAge"
-    />
-    <Button
-      label="Submit"
-      onClick={() => {
-        alert("✅");
-      }}
-    />
+    <Card title="About me">
+      <Content>
+        <Content spacing="large">
+          <Heading level={2}>Sign up!</Heading>
+          <Text>
+            Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis
+            vestibulum. Nulla vitae elit libero, a pharetra augue. Nullam quis
+            risus eget urna mollis ornare vel eu leo. Vestibulum id ligula porta
+            felis euismod semper. Curabitur blandit tempus porttitor.
+          </Text>
+        </Content>
+        <InputText placeholder="Name" />
+        <InputText placeholder="Phone" />
+        <InputText placeholder="Email" />
+        <InputText
+          multiline={true}
+          placeholder="Describe yourself"
+          name="describeAge"
+        />
+      </Content>
+    </Card>
   </Content>
 </Playground>
 
 ## Within Cards
 
 <Playground>
-  <Card>
-    <Title title="About me" />
+  <Card title="About me">
     <Content>
       <Heading level={4}>My favourite food</Heading>
       <Text>
