--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -19,15 +19,12 @@ Input number is used in forms that accept numbers as an answer.
 <Playground>
   {() => {
     const [value, setValue] = useState(30);
-    const handleChange = newValue => {
-      setValue(newValue);
-    };
     return (
       <InputNumber
         value={value}
         max={32}
         min={0}
-        onChange={handleChange}
+        onChange={setValue}
         placeholder="Age"
       />
     );
@@ -69,23 +66,17 @@ Input number is used in forms that accept numbers as an answer.
   />
 </Playground>
 
-### Invalid with message
-
-<Playground>
-  <InputNumber
-    placeholder="Days per month"
-    defaultValue={1.1}
-    max={32}
-    min={0}
-    validationMessage="Enter a number between 0 and 32"
-    name="daysPerMonth"
-  />
-</Playground>
-
 ## Sizes
+
+### Small
 
 <Playground>
   <InputNumber name="smallField" size="small" placeholder="Duration" />
+</Playground>
+
+### Large
+
+<Playground>
   <InputNumber
     name="largeField"
     size="large"
