--- a/packages/components/src/InputTime/InputTime.mdx
+++ b/packages/components/src/InputTime/InputTime.mdx
@@ -8,6 +8,7 @@ import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { InputTime } from ".";
 import { Button } from "../Button";
+import { Content } from "../Content";
 import { useState } from "react";
 import { CivilTime } from "@std-proposal/temporal";
 
@@ -21,28 +22,32 @@ job started/ended.
 At the moment the 12-hour vs 24-hour preference is set by the operating system
 and this component doesn't look at the Jobber setting.
 
-## Simple Example
-
 ```ts
 import { InputTime } "@jobber/components/InputTime";
 ```
 
 <Playground>
-
-  <InputTime defaultValue={new CivilTime(2,35)} size="small" />
-  <InputTime defaultValue={new CivilTime(2,35)} />
-  <InputTime defaultValue={new CivilTime(2,35)} size="large" />
-
+  <InputTime defaultValue={new CivilTime(2, 35)} />
 </Playground>
 
 ## States
 
+### Disabled
+
 <Playground>
-
   <InputTime defaultValue={new CivilTime(3, 52)} disabled={true} />
-  <InputTime defaultValue={new CivilTime(5, 23)} readonly={true} />
-  <InputTime defaultValue={new CivilTime(2, 35)} invalid={true} />
+</Playground>
 
+### Read only
+
+<Playground>
+  <InputTime defaultValue={new CivilTime(5, 23)} readonly={true} />
+</Playground>
+
+### Invalid
+
+<Playground>
+  <InputTime defaultValue={new CivilTime(2, 35)} invalid={true} />
 </Playground>
 
 ## Events
@@ -61,11 +66,11 @@ the last element is set the change event will fire.
       setTime(newTime);
     };
     return (
-      <>
+      <Content>
         <InputTime value={time} onChange={handleChange} />
         <pre>{time && time.toString()}</pre>
         <Button label="Reset" onClick={resetTime} />
-      </>
+      </Content>
     );
   }}
 </Playground>
