--- a/plop/templates/component/{{name}}.mdx
+++ b/plop/templates/component/{{name}}.mdx
@@ -8,22 +8,24 @@ import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
 import { {{name}} } from ".";
 
-# {{ name }}
+# {{ titleCase name }}
 
 <ComponentStatus stage="pre" responsive="no" accessible="no" />
 
-In Jobber a {{ name }} is used to …
-
-## Simple Example
+Write a description about what {{ name }} component is trying to achieve.
 
 <Playground>
   <{{ name }} text="Bob" />
 </Playground>
 
+## Loud
+
+Write a short description about `loud` prop.
+
 <Playground>
-  <{{ name }} text="Bob" loud />
+  <{{ name }} text="Fred" loud={true} />
 </Playground>
 
-## {{ name }} Properties
+## Props
 
 <Props of={ {{ name }} } />
