Add import example to generator.

--- a/plop/templates/component/{{name}}.mdx
+++ b/plop/templates/component/{{name}}.mdx
@@ -14,6 +14,12 @@ import { {{name}} } from ".";
 
 Write a description about what {{ name }} component is trying to achieve.
 
+## Simple Example
+
+```ts
+import { {{name}} } from "@jobber/components/{{name}}";
+```
+
 <Playground>
   <{{ name }} text="Bob" />
 </Playground>
