docs(components): Unify component Readme Structure

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -15,6 +15,22 @@ import { Banner } from ".";
 Banners provide feedback and information about user actions and app operations.
 They're positioned at the top of the screen or near the content they reference.
 
+```ts
+import { Banner } from "@jobber/components/Banner";
+```
+
+<Playground>
+  <Banner type="success">You've successfully Hulked out</Banner>
+</Playground>
+
+## Props
+
+<Props of={Banner} />
+
+---
+
+# Usage
+
 ## Notice message
 
 <Playground>
@@ -40,7 +56,3 @@ They're positioned at the top of the screen or near the content they reference.
 <Playground>
   <Banner type="error">Hulk smash has been unsuccessful</Banner>
 </Playground>
-
-## Properties
-
-<Props of={Banner} />
