--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -15,6 +15,10 @@ import { Button } from ".";
 Buttons are a core user interface component, as they allow users to initiate,
 complete, and reverse actions.
 
+```ts
+import { Button } from "@jobber/components/Button";
+```
+
 <Playground>
   <Button
     label="Submit"
@@ -24,9 +28,13 @@ complete, and reverse actions.
   />
 </Playground>
 
-## Button Properties
+## Props
 
 <Props of={Button} />
+
+---
+
+# Usage
 
 ## Work actions
 
