--- a/packages/components/src/Content/Content.mdx
+++ b/packages/components/src/Content/Content.mdx
@@ -20,6 +20,10 @@ import { Card } from "../Card";
 
 Contents are used to give elements consistent vertical spacing and padding.
 
+```ts
+import { Content } from "@jobber/components/Content";
+```
+
 <Playground>
   <Content>
     <Card title="About me">
@@ -45,6 +49,14 @@ Contents are used to give elements consistent vertical spacing and padding.
     </Card>
   </Content>
 </Playground>
+
+## Props
+
+<Props of={Content} />
+
+---
+
+# Usage
 
 ## Within Cards
 
@@ -72,7 +84,3 @@ Contents are used to give elements consistent vertical spacing and padding.
 
   </Card>
 </Playground>
-
-## Content Properties
-
-<Props of={Content} />
