--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -28,7 +28,7 @@ meaning and recommended usage.
 ## Simple Example
 
 <Playground>
-  <Icon name="address" />
+  <Icon name="gift" />
 </Playground>
 
 ## Properties
@@ -63,18 +63,17 @@ meaning and recommended usage.
 
 ## Files
 
-| Icon                       | `Name`       |
-| :------------------------- | :----------- |
-| <Icon name="addNote" />    | `addNote`    |
-| <Icon name="archive" />    | `archive`    |
-| <Icon name="attachment" /> | `attachment` |
-| <Icon name="excel" />      | `excel`      |
-| <Icon name="file" />       | `file`       |
-| <Icon name="note" />       | `note`       |
-| <Icon name="pdf" />        | `pdf`        |
-| <Icon name="video" />      | `video`      |
-| <Icon name="word" />       | `word`       |
-| <Icon name="upload" />     | `upload`     |
+| Icon                    | `Name`    |
+| :---------------------- | :-------- |
+| <Icon name="addNote" /> | `addNote` |
+| <Icon name="archive" /> | `archive` |
+| <Icon name="excel" />   | `excel`   |
+| <Icon name="file" />    | `file`    |
+| <Icon name="note" />    | `note`    |
+| <Icon name="pdf" />     | `pdf`     |
+| <Icon name="video" />   | `video`   |
+| <Icon name="word" />    | `word`    |
+| <Icon name="upload" />  | `upload`  |
 
 ## Forms
 
@@ -84,7 +83,6 @@ meaning and recommended usage.
 | <Icon name="edit" />      | `edit`      |
 | <Icon name="star" />      | `star`      |
 | <Icon name="starFill" />  | `starFill`  |
-| <Icon name="textBlock" /> | `textBlock` |
 | <Icon name="textBox" />   | `textBox`   |
 | <Icon name="textField" /> | `textField` |
 | <Icon name="dropdown" />  | `dropdown`  |
@@ -103,7 +101,6 @@ meaning and recommended usage.
 | Icon                       | `Name`       |
 | :------------------------- | :----------- |
 | <Icon name="address" />    | `address`    |
-| <Icon name="directions" /> | `directions` |
 | <Icon name="moveMarker" /> | `moveMarker` |
 | <Icon name="property" />   | `property`   |
 
@@ -122,7 +119,6 @@ meaning and recommended usage.
 
 | Icon                           | `Name`           |
 | :----------------------------- | :--------------- |
-| <Icon name="avatar" />         | `avatar`         |
 | <Icon name="clients" />        | `clients`        |
 | <Icon name="person" />         | `person`         |
 | <Icon name="user" />           | `user`           |
@@ -143,16 +139,15 @@ meaning and recommended usage.
 | <Icon name="twitter" />    | `twitter`    |
 | <Icon name="yelp" />       | `yelp`       |
 | <Icon name="youtube" />    | `youtube`    |
+| <Icon name="embed" />      | `embed`      |
 
 ## Transaction
 
-| Icon                         | `Name`         |
-| :--------------------------- | :------------- |
-| <Icon name="ePayment" />     | `ePayment`     |
-| <Icon name="payment" />      | `payment`      |
-| <Icon name="percent" />      | `percent`      |
-| <Icon name="shoppingCart" /> | `shoppingCart` |
-| <Icon name="wallet" />       | `wallet`       |
+| Icon                    | `Name`    |
+| :---------------------- | :-------- |
+| <Icon name="payment" /> | `payment` |
+| <Icon name="percent" /> | `percent` |
+| <Icon name="wallet" />  | `wallet`  |
 
 ## Work
 
@@ -201,22 +196,26 @@ meaning and recommended usage.
 
 | Icon                       | `Name`       |
 | :------------------------- | :----------- |
-| <Icon name="more" />       | `more`       |
 | <Icon name="add" />        | `add`        |
+| <Icon name="batch" />      | `batch`      |
 | <Icon name="camera" />     | `camera`     |
 | <Icon name="checkmark" />  | `checkmark`  |
 | <Icon name="cog" />        | `cog`        |
+| <Icon name="customize" />  | `customize`  |
 | <Icon name="dashboard" />  | `dashboard`  |
 | <Icon name="download" />   | `download`   |
-| <Icon name="link" />       | `link`       |
+| <Icon name="embed" />      | `embed`      |
+| <Icon name="export" />     | `export`     |
 | <Icon name="eye" />        | `eye`        |
 | <Icon name="eyeCrossed" /> | `eyeCrossed` |
+| <Icon name="gift" />       | `gift`       |
 | <Icon name="grid" />       | `grid`       |
+| <Icon name="import" />     | `import`     |
+| <Icon name="link" />       | `link`       |
 | <Icon name="lock" />       | `lock`       |
 | <Icon name="logout" />     | `logout`     |
-| <Icon name="management" /> | `management` |
 | <Icon name="menu" />       | `menu`       |
-| <Icon name="microphone" /> | `microphone` |
+| <Icon name="more" />       | `more`       |
 | <Icon name="phone" />      | `phone`      |
 | <Icon name="quickbooks" /> | `quickbooks` |
 | <Icon name="redo" />       | `redo`       |
@@ -228,7 +227,6 @@ meaning and recommended usage.
 | <Icon name="sun" />        | `sun`        |
 | <Icon name="sync" />       | `sync`       |
 | <Icon name="thumbsUp" />   | `thumbsUp`   |
-| <Icon name="xero" />       | `xero`       |
 
 ## Legacy
 
